--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,15 @@ a{
     margin-right: 5px;
 }
 
+
+.red{
+    color: rgba(255, 0, 0, 0.598);
+}
+
+.rd{
+    color: rgb(255, 0, 0);
+}
+
 ::-webkit-scrollbar {
     width: 0.6rem;
     border-radius: 0.5rem;
@@ -33,4 +42,3 @@ a{
     background-color: #3f4558;
     border-radius: 0.5rem;
   }
-  
